core/traefik/10.0.49/CHANGELOG.md
# Changelog<br>


<a name="traefik-10.0.49"></a>
### [traefik-10.0.49](https://github.com/truecharts/apps/compare/traefik-10.0.48...traefik-10.0.49) (2022-01-31)

#### Fix

* introduce two basic changes with different CORS policy



<a name="traefik-10.0.48"></a>
### [traefik-10.0.48](https://github.com/truecharts/apps/compare/traefik-10.0.47...traefik-10.0.48) (2022-01-31)



<a name="traefik-10.0.47"></a>
### [traefik-10.0.47](https://github.com/truecharts/apps/compare/traefik-10.0.46...traefik-10.0.47) (2022-01-31)

#### Fix

* replace depricated header references



<a name="traefik-10.0.46"></a>
### [traefik-10.0.46](https://github.com/truecharts/apps/compare/traefik-10.0.45...traefik-10.0.46) (2022-01-31)

#### Fix

* correct mistaken indentation on synapse middleware



<a name="traefik-10.0.45"></a>
### [traefik-10.0.45](https://github.com/truecharts/apps/compare/traefik-10.0.44...traefik-10.0.45) (2022-01-31)



<a name="traefik-10.0.44"></a>
### [traefik-10.0.44](https://github.com/truecharts/apps/compare/traefik-10.0.43...traefik-10.0.44) (2022-01-28)



<a name="traefik-10.0.43"></a>
### [traefik-10.0.43](https://github.com/truecharts/apps/compare/traefik-10.0.42...traefik-10.0.43) (2022-01-27)

#### Fix

* hide Traefik metrics port and enable prometheus metrics



<a name="traefik-10.0.42"></a>
### [traefik-10.0.42](https://github.com/truecharts/apps/compare/traefik-10.0.41...traefik-10.0.42) (2022-01-25)

#### Chore

* update helm general non-major helm releases ([#1791](https://github.com/truecharts/apps/issues/1791))



<a name="traefik-10.0.41"></a>
### [traefik-10.0.41](https://github.com/truecharts/apps/compare/traefik-10.0.40...traefik-10.0.41) (2022-01-22)

#### Chore

* update helm general non-major helm releases ([#1766](https://github.com/truecharts/apps/issues/1766))



<a name="traefik-10.0.40"></a>
### [traefik-10.0.40](https://github.com/truecharts/apps/compare/traefik-10.0.39...traefik-10.0.40) (2022-01-21)

#### Chore

* update helm general non-major helm releases ([#1759](https://github.com/truecharts/apps/issues/1759))

#### Fix

* set additional_attrs: true on all dicts ([#1750](https://github.com/truecharts/apps/issues/1750))



<a name="traefik-10.0.39"></a>
### [traefik-10.0.39](https://github.com/truecharts/apps/compare/traefik-10.0.38...traefik-10.0.39) (2022-01-18)

#### Chore

* update helm general non-major helm releases ([#1732](https://github.com/truecharts/apps/issues/1732))



<a name="traefik-10.0.38"></a>
### [traefik-10.0.38](https://github.com/truecharts/apps/compare/traefik-10.0.37...traefik-10.0.38) (2022-01-13)

#### Chore

